--- a/assets/app.css
+++ b/assets/app.css
@@ -802,6 +802,9 @@ th {
 .pointer-events-none {
   pointer-events: none;
 }
+.invisible {
+  visibility: hidden;
+}
 .fixed {
   position: fixed;
 }
@@ -901,6 +904,9 @@ th {
 .m-auto {
   margin: auto;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -952,6 +958,10 @@ th {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+.-mx-1 {
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
 }
 .\!mt-5 {
   margin-top: 1.25rem !important;
@@ -1021,6 +1031,18 @@ th {
 }
 .ml-4 {
   margin-left: 1rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
+.mr-1 {
+  margin-right: 0.25rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mt-12 {
+  margin-top: 3rem;
 }
 .block {
   display: block;
@@ -1113,6 +1135,15 @@ th {
   height: -moz-max-content;
   height: max-content;
 }
+.h-12 {
+  height: 3rem;
+}
+.h-8 {
+  height: 2rem;
+}
+.h-px {
+  height: 1px;
+}
 .min-h-0 {
   min-height: 0px;
 }
@@ -1167,6 +1198,18 @@ th {
 .w-screen {
   width: 100vw;
 }
+.w-40 {
+  width: 10rem;
+}
+.w-56 {
+  width: 14rem;
+}
+.w-8 {
+  width: 2rem;
+}
+.w-64 {
+  width: 16rem;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1176,6 +1219,9 @@ th {
 }
 .min-w-full {
   min-width: 100%;
+}
+.min-w-\[8rem\] {
+  min-width: 8rem;
 }
 .max-w-3xl {
   max-width: 48rem;
@@ -1213,6 +1259,9 @@ th {
 .flex-none {
   flex: none;
 }
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
 .flex-grow {
   flex-grow: 1;
 }
@@ -1242,6 +1291,18 @@ th {
   --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.-translate-y-2 {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-px {
+  --tw-translate-y: 1px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1264,6 +1325,9 @@ th {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.cursor-default {
+  cursor: default;
 }
 .select-none {
   -webkit-user-select: none;
@@ -1508,6 +1572,13 @@ th {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-neutral-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 229 229 / var(--tw-border-opacity));
+}
+.border-neutral-200\/70 {
+  border-color: rgb(229 229 229 / 0.7);
+}
 .bg-\[\#f8f9f4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 244 / var(--tw-bg-opacity));
@@ -1585,6 +1656,14 @@ th {
 }
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+.bg-neutral-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
+}
+.bg-shof-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
 }
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
@@ -1692,6 +1771,14 @@ th {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1718,6 +1805,33 @@ th {
 }
 .pl-4 {
   padding-left: 1rem;
+}
+.pl-3 {
+  padding-left: 0.75rem;
+}
+.pr-12 {
+  padding-right: 3rem;
+}
+.pr-10 {
+  padding-right: 2.5rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
+}
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 .text-left {
   text-align: left;
@@ -1920,6 +2034,14 @@ th {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-neutral-400 {
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+.text-neutral-700 {
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -1941,6 +2063,12 @@ th {
 .opacity-75 {
   opacity: 0.75;
 }
+.opacity-0 {
+  opacity: 0;
+}
+.opacity-60 {
+  opacity: 0.6;
+}
 .shadow-inner {
   --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
@@ -1961,6 +2089,15 @@ th {
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1975,6 +2112,11 @@ th {
 }
 .transition-all {
   transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2207,6 +2349,10 @@ div[data-block-handle='ig_feed'] {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
+.hover\:bg-neutral-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
 .hover\:fill-accent:hover {
   fill: #ec764a;
 }
@@ -2243,6 +2389,18 @@ div[data-block-handle='ig_feed'] {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.focus\:bg-accent:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
+}
+.focus\:bg-white:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 .active\:scale-100:active {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
@@ -2257,6 +2415,22 @@ div[data-block-handle='ig_feed'] {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.active\:bg-white:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.disabled\:pointer-events-none:disabled {
+  pointer-events: none;
+}
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
+}
+.group:hover .group-hover\:visible {
+  visibility: visible;
+}
+.group:hover .group-hover\:mr-0 {
+  margin-right: 0px;
 }
 .group:hover .group-hover\:block {
   display: block;
@@ -2286,8 +2460,17 @@ div[data-block-handle='ig_feed'] {
 .group:hover .group-hover\:underline {
   text-decoration-line: underline;
 }
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
+}
 .peer:checked ~ .peer-checked\:font-medium {
   font-weight: 500;
+}
+.data-\[disabled\]\:pointer-events-none[data-disabled] {
+  pointer-events: none;
+}
+.data-\[disabled\]\:opacity-50[data-disabled] {
+  opacity: 0.5;
 }
 @media (min-width: 640px) {
   .sm\:col-span-2 {
@@ -2295,6 +2478,13 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:m-10 {
     margin: 2.5rem;
+  }
+  .sm\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .sm\:mr-0 {
+    margin-right: 0px;
   }
   .sm\:block {
     display: block;
@@ -2354,8 +2544,14 @@ div[data-block-handle='ig_feed'] {
   .sm\:justify-start {
     justify-content: flex-start;
   }
+  .sm\:justify-end {
+    justify-content: flex-end;
+  }
   .sm\:justify-center {
     justify-content: center;
+  }
+  .sm\:justify-between {
+    justify-content: space-between;
   }
   .sm\:gap-2 {
     gap: 0.5rem;
@@ -2396,6 +2592,9 @@ div[data-block-handle='ig_feed'] {
   .sm\:text-left {
     text-align: left;
   }
+  .sm\:text-right {
+    text-align: right;
+  }
   .sm\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -2432,6 +2631,9 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:mr-6 {
     margin-right: 1.5rem;
+  }
+  .md\:mr-0 {
+    margin-right: 0px;
   }
   .md\:block {
     display: block;
@@ -2484,6 +2686,10 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:w-full {
     width: 100%;
+  }
+  .md\:w-max {
+    width: -moz-max-content;
+    width: max-content;
   }
   .md\:max-w-\[450px\] {
     max-width: 450px;
