--- a/snippets/account-navigation.liquid
+++ b/snippets/account-navigation.liquid
@@ -1,17 +1,13 @@
-<div class=" flex flex-col gap-2 divide-y w-screen sm:w-max h-max " x-data="{
+<div class="flex-col gap-2 w-56 flex-shrink-0 hidden lg:block" x-data="{
   links:[
-    {url: '{{ routes.account_url }}', name: 'Szczegóły konta', path: '/account'},
-    {url: '{{ routes.account_addresses_url }}', name: 'Wyświetl adresy ({{ customer.addresses_count }})', path: '/account/addresses'},
+    {url: '{{ routes.account_url }}', name: 'Zamówienia', path: '/account'},
+    {url: '{{ routes.account_addresses_url }}', name: 'Adresy ({{ customer.addresses_count }})', path: '/account/addresses'},
     {url: '{{ routes.account_logout_url }}', name: 'Wyloguj się', path: '/account/logout'}
   ]
 }">
-  <div class="flex justify-between items-center mt-2 lg:mt-6 px-2">
-    <h2 class="px-4 font-normal text-xl">Konto</h2>
 
-    <button @click="open = false" class="lg:hidden p-2 flex justify-center items-center rounded-full hover:bg-gray-100 hover:scale-110 hover:-rotate-90 transition">
-      {% render 'icon-close' %}
-    </button>
-  </div>
+  <h2 class="px-6 pt-5 pb-3 font-normal text-xl">Konto</h2>
+
   <div class="flex flex-col gap-2 p-2">
     <template x-for="link in links">
       <a
@@ -21,15 +17,5 @@
         <span x-text="link.name"></span>
       </a>
     </template>
-  </div>
-
-  <div class="px-6 py-3">
-    <h2 class="pb-2 font-normal">{{ customer.name }}</h2>
-    {{ customer.email }}
-  </div>
-
-  <div class="px-6 py-3">
-    <h2 class="pb-2 font-normal">Domyślny adres:</h2>
-    {{ customer.default_address | format_address }}
   </div>
 </div>
