--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -1,97 +1,22 @@
-<div class="container" x-data="{ title: null}">
-  <h1 class="md:text-3xl text-2xl py-7">Adresy</h1>
-  <div class="md:grid grid-cols-4 gap-6 block">
-    <div class="col-span-1">
-      <div>
-        {% render 'account-navigation' %}
-      </div>
-      <div class="py-2">
-        <h2 class="pb-2 font-semibold">{{ customer.name }}</h2>
+<div
+class="sm:container flex" x-data="{ title: null}">
+
+  {% comment %} Desktop account nav {% endcomment %}
+  {% render 'account-navigation' %}
+
+  <div class="sm:px-6 w-full">
+    {% render 'adresses-content' %}
+      <div class="flex flex-col sm:flex-row sm:justify-between p-4 gap-6 mt-4">
+      {% comment %} Adresses {% endcomment %}
+      <div class="">
+        <h2 class="pb-2 font-normal">{{ customer.name }}</h2>
         {{ customer.email }}
       </div>
-      <div class="py-2">
-        <h2 class="pb-2 font-semibold">Domyślny adres:</h2>
+
+      <div class=" sm:text-right">
+        <h2 class="pb-2 font-normal">Domyślny adres:</h2>
         {{ customer.default_address | format_address }}
       </div>
     </div>
-
-    <div
-      class="col-span-3"
-      x-init="$nextTick(() => {
-										province = JSON.parse($refs.address_country.selectedOptions[0].dataset.provinces);
-								})"
-      x-data="{ openDelete: false, openNew: false, deleteId: null, province: [] ,openEdit: false, address: {{ customer.addresses[0] | json | escape }} }">
-      <div class="overflow-hidden">
-        <div class="">
-          <h3 class="text-2xl font-bold px-3 pb-2">Lista adresów</h3>
-          <div class="mt-3 overflow-hidden overflow-x-auto font-bold">
-            {% paginate customer.addresses by 10 %}
-              {% if customer.addresses != 0 %}
-                <table class="min-w-full divide-y divide-gray-200 border">
-                  <thead>
-                    <tr>
-                      <th class="text-left px-3 py-2">Adres</th>
-                      <th class="text-left px-3 py-2">Czynności</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for address in customer.addresses %}
-                      <tr class="border-b border-gray-300">
-                        <td class="px-3 py-2">
-                          <div class="flex items-center">
-                            {{ address | format_address | replace: '<br>', ' ' }}
-                            {% if address == customer.default_address %}
-                              <i class="rounded-full bg-green-600 text-white px-3 py-1 ml-3 text-xs font-bold">Domyślny</i>
-                            {% endif %}
-                          </div>
-                        </td>
-
-                        <td class="px-3 py-2 text-center">
-                          <div class="flex items-center gap-3">
-
-                            <button @click="openEdit = true; address = {{ address | json | escape }}">
-                              Edytuj
-                            </button>
-
-                            <button @click="openDelete = true; deleteId = {{ address.id }}">
-                              Usuń
-                            </button>
-
-                          </div>
-                        </td>
-
-                      </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              {% else %}
-                <p>Proszę, dodaj adres
-                </p>
-              {% endif %}
-
-              {% if paginate.pages > 1 %}
-                <div class="pagination">
-                  {% render 'pagination'
-                    , paginate: paginate %}
-                </div>
-              {% endif %}
-
-            {% endpaginate %}
-          </div>
-        </div>
-
-        <button
-          type="submit"
-          @click="openNew = true"
-          class="button my-4">
-          Dodaj nowy adres
-        </button>
-
-        {% render 'address-add' %}
-        {% render 'address-delete' %}
-        {% render 'address-edit' %}
-
-      </div>
-    </div>
   </div>
-</div></div>
+</div>
