Fix mobile nav dropdown in account page

--- a/snippets/account-content.liquid
+++ b/snippets/account-content.liquid
@@ -1,7 +1,7 @@
 <div class="flex sm:justify-start items-center">
 
   {% comment %} Mobile Nav {% endcomment %}
-  <div x-data="{ dropdownOpen: false }" class="relative w-full m-2 sm:w-max sm:mx-0 lg:hidden">
+  <div x-data="{ dropdownOpen: true }" class="relative w-full m-2 sm:w-max sm:mx-0 lg:hidden">
 
     <button @click="dropdownOpen=true" class="w-full inline-flex items-center justify-center h-12 py-2 pl-3 pr-10 text-sm font-medium transition-colors bg-white border rounded-md text-neutral-700 hover:bg-gray-100 active:bg-white focus:outline-none disabled:opacity-50 disabled:pointer-events-none">
       <span class="flex items-center flex-shrink-0 h-full leading-none px-5">
@@ -29,14 +29,14 @@
       class="absolute top-0 z-50 w-full mt-12 -translate-x-1/2 left-1/2"
       x-cloak>
       <div class="p-1 mt-1 bg-white border rounded-md shadow-md border-neutral-200/70 text-neutral-700">
-        <a href="{{ routes.account_addresses_url }}" class="relative flex cursor-default select-none hover:bg-neutral-100 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50 justify-center">
+        <a href="{{ routes.account_addresses_url }}" class="relative flex cursor-default select-none hover:bg-neutral-100 items-center rounded px-2 py-2 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50 justify-center">
           Adresy
         </a>
 
         <div class="h-px my-1 -mx-1 bg-neutral-200"></div>
 
-        <a href="{{ routes.account_logout_url }}" class="relative flex justify-center cursor-default select-none hover:bg-neutral-100 items-center rounded px-2 py-1.5 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50">
-          <div class="px-2 py-1.5 text-sm font-semibold">Wyloguj się</div>
+        <a href="{{ routes.account_logout_url }}" class="relative flex justify-center cursor-default select-none hover:bg-neutral-100 items-center rounded  text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50">
+          <div class="px-2 py-2 text-sm font-normal">Wyloguj się</div>
         </a>
       </div>
     </div>
