Add responsive styles for small screens

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -3,9 +3,9 @@
   class="z-50"
   x-cloak>
   <!-- LOGO WITH ACTIONS -->
-  <div class="container mx-auto relative">
+  <div class="sm:container mx-auto relative">
     <!-- MENU BUTTON -->
-    <div x-on:click="toggleMenu" class="absolute left-6 top-1/2 p-3 rounded-full hover:bg-gray-100 transform -translate-y-1/2 lg:hidden">
+    <div x-on:click="toggleMenu" class="absolute sm:left-6 lef-0 top-1/2 p-2 sm:p-3 rounded-full hover:bg-gray-100 transform -translate-y-1/2 lg:hidden">
       {% render 'icon-menu' %}
     </div>
 
@@ -18,15 +18,15 @@
     </div>
 
     <!-- SIDE ACTIONS -->
-    <div class="flex gap-2 absolute right-6 top-1/2 transform -translate-y-1/2">
+    <div class="flex sm:gap-2 sm:right-6 absolute right-0 top-1/2 transform -translate-y-1/2">
       <button
-        class="p-3 cursor-pointer rounded-full hover:bg-gray-100"
+        class="p-2 sm:p-3 cursor-pointer rounded-full hover:bg-gray-100"
         @click="toggleSearch"
         type="button">
         {% render 'icon-search' %}
       </button>
       <a
-        class="p-3 cursor-pointer rounded-full hover:bg-gray-100 "
+        class="p-2 sm:p-3 cursor-pointer rounded-full hover:bg-gray-100 "
         x-data
         @click="window.Functions.showCartDrawer()">{% render 'icon-shopping-bag' %}</a>
 
