--- a/assets/app.css
+++ b/assets/app.css
@@ -2473,6 +2473,12 @@ div[data-block-handle='ig_feed'] {
   opacity: 0.5;
 }
 @media (min-width: 640px) {
+  .sm\:right-6 {
+    right: 1.5rem;
+  }
+  .sm\:left-6 {
+    left: 1.5rem;
+  }
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2573,6 +2579,9 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:p-10 {
     padding: 2.5rem;
+  }
+  .sm\:p-3 {
+    padding: 0.75rem;
   }
   .sm\:px-4 {
     padding-left: 1rem;
