--- a/assets/app.css
+++ b/assets/app.css
@@ -2562,6 +2562,9 @@ div[data-block-handle='ig_feed'] {
   .sm\:gap-2 {
     gap: 0.5rem;
   }
+  .sm\:self-center {
+    align-self: center;
+  }
   .sm\:rounded-md {
     border-radius: 0.375rem;
   }
