--- a/snippets/adresses-content.liquid
+++ b/snippets/adresses-content.liquid
@@ -29,14 +29,14 @@
       class="absolute top-0 z-50 w-full mt-12 -translate-x-1/2 left-1/2"
       x-cloak>
       <div class="p-1 mt-1 bg-white border rounded-md shadow-md border-neutral-200/70 text-neutral-700">
-        <a href="{{ routes.account_url }}" class="relative flex cursor-default select-none hover:bg-neutral-100 items-center rounded px-2 py-2 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50 justify-center">
+        <a href="{{ routes.account_url }}" class="relative flex cursor-default select-none hover:bg-neutral-100 items-center rounded px-3 py-3 text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50 justify-center">
           Zamówienia
         </a>
 
         <div class="h-px my-1 -mx-1 bg-neutral-200"></div>
 
         <a href="{{ routes.account_logout_url }}" class="relative flex justify-center cursor-default select-none hover:bg-neutral-100 items-center rounded  text-sm outline-none transition-colors data-[disabled]:pointer-events-none data-[disabled]:opacity-50">
-          <div class="px-2 py-2 text-sm font-normal">Wyloguj się</div>
+          <div class="px-3 py-3 text-sm font-normal">Wyloguj się</div>
         </a>
       </div>
     </div>
@@ -45,9 +45,12 @@
   {% comment %} Heading {% endcomment %}
   <h3 class="hidden lg:block text-xl font-normal px-5 py-5">Adresy</h3>
 </div>
-<div x-init="$nextTick(() => {
+<div
+  x-init="$nextTick(() => {
   province = JSON.parse($refs.address_country.selectedOptions[0].dataset.provinces);
-})" x-data="{ openDelete: false, openNew: false, deleteId: null, province: [] ,openEdit: false, address: {{ customer.addresses[0] | json | escape }} }">
+})"
+  x-data="{ openDelete: false, openNew: false, deleteId: null, province: [] ,openEdit: false, address: {{ customer.addresses[0] | json | escape }} }"
+  class="flex flex-col">
   {% paginate customer.addresses by 10 %}
     {% if customer.addresses != 0 %}
       <div class="flex flex-col border sm:rounded-md sm:shadow-m">
@@ -112,7 +115,7 @@
   <button
     type="submit"
     @click="openNew = true"
-    class="button my-4 uppercase">
+    class="button my-4 uppercase m-2 sm:self-center">
     Dodaj nowy adres
   </button>
 
@@ -130,70 +133,70 @@
 
 {% comment %} OLD {% endcomment %}
 {% comment %} <div
-                                                      class="col-span-3"
-                                                      x-init="$nextTick(() => {
-                                                    										province = JSON.parse($refs.address_country.selectedOptions[0].dataset.provinces);
-                                                    								})"
-                                                      x-data="{ openDelete: false, openNew: false, deleteId: null, province: [] ,openEdit: false, address: {{ customer.addresses[0] | json | escape }} }">
-                                                      <div class="overflow-hidden">
-                                                        <div class="">
-                                                          <h3 class="hidden lg:block text-xl font-normal px-5 py-5">Adresy</h3>
-                                                          <div class="mt-3 overflow-hidden overflow-x-auto font-bold">
-                                                            {% paginate customer.addresses by 10 %}
-                                                              {% if customer.addresses != 0 %}
-                                                                <table class="min-w-full divide-y divide-gray-200 border">
-                                                                  <thead>
-                                                                    <tr>
-                                                                      <th class="text-left px-3 py-2">Adres</th>
-                                                                      <th class="text-left px-3 py-2">Czynności</th>
-                                                                    </tr>
-                                                                  </thead>
-                                                                  <tbody>
-                                                                    {% for address in customer.addresses %}
-                                                                      <tr class="border-b border-gray-300">
-                                                                        <td class="px-3 py-2">
-                                                                          <div class="flex items-center">
-                                                                            {{ address | format_address | replace: '<br>', ' ' }}
-                                                                            {% if address == customer.default_address %}
-                                                                              <i class="rounded-full bg-green-600 text-white px-3 py-1 ml-3 text-xs font-bold">Domyślny</i>
-                                                                            {% endif %}
-                                                                          </div>
-                                                                        </td>
+                                                                  class="col-span-3"
+                                                                  x-init="$nextTick(() => {
+                                                                										province = JSON.parse($refs.address_country.selectedOptions[0].dataset.provinces);
+                                                                								})"
+                                                                  x-data="{ openDelete: false, openNew: false, deleteId: null, province: [] ,openEdit: false, address: {{ customer.addresses[0] | json | escape }} }">
+                                                                  <div class="overflow-hidden">
+                                                                    <div class="">
+                                                                      <h3 class="hidden lg:block text-xl font-normal px-5 py-5">Adresy</h3>
+                                                                      <div class="mt-3 overflow-hidden overflow-x-auto font-bold">
+                                                                        {% paginate customer.addresses by 10 %}
+                                                                          {% if customer.addresses != 0 %}
+                                                                            <table class="min-w-full divide-y divide-gray-200 border">
+                                                                              <thead>
+                                                                                <tr>
+                                                                                  <th class="text-left px-3 py-2">Adres</th>
+                                                                                  <th class="text-left px-3 py-2">Czynności</th>
+                                                                                </tr>
+                                                                              </thead>
+                                                                              <tbody>
+                                                                                {% for address in customer.addresses %}
+                                                                                  <tr class="border-b border-gray-300">
+                                                                                    <td class="px-3 py-2">
+                                                                                      <div class="flex items-center">
+                                                                                        {{ address | format_address | replace: '<br>', ' ' }}
+                                                                                        {% if address == customer.default_address %}
+                                                                                          <i class="rounded-full bg-green-600 text-white px-3 py-1 ml-3 text-xs font-bold">Domyślny</i>
+                                                                                        {% endif %}
+                                                                                      </div>
+                                                                                    </td>
 
-                                                                        <td class="px-3 py-2 text-center">
-                                                                          <div class="flex items-center gap-3">
+                                                                                    <td class="px-3 py-2 text-center">
+                                                                                      <div class="flex items-center gap-3">
 
-                                                                            <button @click="openEdit = true; address = {{ address | json | escape }}">
-                                                                              Edytuj
-                                                                            </button>
+                                                                                        <button @click="openEdit = true; address = {{ address | json | escape }}">
+                                                                                          Edytuj
+                                                                                        </button>
 
-                                                                            <button @click="openDelete = true; deleteId = {{ address.id }}">
-                                                                              Usuń
-                                                                            </button>
+                                                                                        <button @click="openDelete = true; deleteId = {{ address.id }}">
+                                                                                          Usuń
+                                                                                        </button>
 
-                                                                          </div>
-                                                                        </td>
+                                                                                      </div>
+                                                                                    </td>
 
-                                                                      </tr>
-                                                                    {% endfor %}
-                                                                  </tbody>
-                                                                </table>
-                                                              {% else %}
-                                                                <p>Proszę, dodaj adres
-                                                                </p>
-                                                              {% endif %}
+                                                                                  </tr>
+                                                                                {% endfor %}
+                                                                              </tbody>
+                                                                            </table>
+                                                                          {% else %}
+                                                                            <p>Proszę, dodaj adres
+                                                                            </p>
+                                                                          {% endif %}
 
-                                                              {% if paginate.pages > 1 %}
-                                                                <div class="pagination">
-                                                                  {% render 'pagination'
-                                                                    , paginate: paginate %}
-                                                                </div>
-                                                              {% endif %}
+                                                                          {% if paginate.pages > 1 %}
+                                                                            <div class="pagination">
+                                                                              {% render 'pagination'
+                                                                                , paginate: paginate %}
+                                                                            </div>
+                                                                          {% endif %}
 
-                                                            {% endpaginate %}
-                                                          </div>
-                                                        </div>
+                                                                        {% endpaginate %}
+                                                                      </div>
+                                                                    </div>
 
 
-                                                      </div>
+                                                                  </div>
 </div> {% endcomment %}
