--- a/assets/app.css
+++ b/assets/app.css
@@ -871,6 +871,12 @@ th {
 .top-\[58px\] {
   top: 58px;
 }
+.left-1 {
+  left: 0.25rem;
+}
+.right-1 {
+  right: 0.25rem;
+}
 .z-10 {
   z-index: 10;
 }
