--- a/snippets/icon-dropdown.liquid
+++ b/snippets/icon-dropdown.liquid
@@ -5,9 +5,9 @@
   viewBox="0 0 24 24"
   fill="none"
   stroke="currentColor"
-  stroke-width="2"
+  stroke-width="1.5"
   stroke-linecap="round"
   stroke-linejoin="round"
-  class="feather feather-chevron-down">
+  class="feather feather-chevron-down {{ class }}">
   <polyline points="6 9 12 15 18 9"></polyline>
 </svg>
