--- a/assets/app.css
+++ b/assets/app.css
@@ -802,9 +802,6 @@ th {
 .pointer-events-none {
   pointer-events: none;
 }
-.invisible {
-  visibility: hidden;
-}
 .fixed {
   position: fixed;
 }
@@ -841,20 +838,20 @@ th {
 .left-0 {
   left: 0px;
 }
+.left-1 {
+  left: 0.25rem;
+}
 .left-1\/2 {
   left: 50%;
-}
-.left-6 {
-  left: 1.5rem;
 }
 .right-0 {
   right: 0px;
 }
+.right-1 {
+  right: 0.25rem;
+}
 .right-4 {
   right: 1rem;
-}
-.right-6 {
-  right: 1.5rem;
 }
 .top-0 {
   top: 0px;
@@ -870,12 +867,6 @@ th {
 }
 .top-\[58px\] {
   top: 58px;
-}
-.left-1 {
-  left: 0.25rem;
-}
-.right-1 {
-  right: 0.25rem;
 }
 .z-10 {
   z-index: 10;
@@ -895,9 +886,6 @@ th {
 .-order-1 {
   order: -1;
 }
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -907,11 +895,15 @@ th {
 .m-10 {
   margin: 2.5rem;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .m-auto {
   margin: auto;
 }
-.m-2 {
-  margin: 0.5rem;
+.-mx-1 {
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
 }
 .mx-10 {
   margin-left: 2.5rem;
@@ -965,10 +957,6 @@ th {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.-mx-1 {
-  margin-left: -0.25rem;
-  margin-right: -0.25rem;
-}
 .\!mt-5 {
   margin-top: 1.25rem !important;
 }
@@ -1011,6 +999,9 @@ th {
 .mt-10 {
   margin-top: 2.5rem;
 }
+.mt-12 {
+  margin-top: 3rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1034,21 +1025,6 @@ th {
 }
 .mt-auto {
   margin-top: auto;
-}
-.ml-4 {
-  margin-left: 1rem;
-}
-.ml-auto {
-  margin-left: auto;
-}
-.mr-1 {
-  margin-right: 0.25rem;
-}
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.mt-12 {
-  margin-top: 3rem;
 }
 .block {
   display: block;
@@ -1088,6 +1064,9 @@ th {
 }
 .h-10 {
   height: 2.5rem;
+}
+.h-12 {
+  height: 3rem;
 }
 .h-2 {
   height: 0.5rem;
@@ -1134,31 +1113,17 @@ th {
 .h-full {
   height: 100%;
 }
-.h-screen {
-  height: 100vh;
-}
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-.h-12 {
-  height: 3rem;
-}
-.h-8 {
-  height: 2rem;
-}
 .h-px {
   height: 1px;
+}
+.h-screen {
+  height: 100vh;
 }
 .min-h-0 {
   min-height: 0px;
 }
 .min-h-screen {
   min-height: 100vh;
-}
-.min-h-max {
-  min-height: -moz-max-content;
-  min-height: max-content;
 }
 .w-1\/2 {
   width: 50%;
@@ -1180,6 +1145,9 @@ th {
 }
 .w-5\/6 {
   width: 83.333333%;
+}
+.w-56 {
+  width: 14rem;
 }
 .w-6 {
   width: 1.5rem;
@@ -1204,18 +1172,6 @@ th {
 .w-screen {
   width: 100vw;
 }
-.w-40 {
-  width: 10rem;
-}
-.w-56 {
-  width: 14rem;
-}
-.w-8 {
-  width: 2rem;
-}
-.w-64 {
-  width: 16rem;
-}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1225,9 +1181,6 @@ th {
 }
 .min-w-full {
   min-width: 100%;
-}
-.min-w-\[8rem\] {
-  min-width: 8rem;
 }
 .max-w-3xl {
   max-width: 48rem;
@@ -1289,6 +1242,10 @@ th {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.-translate-y-2 {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .translate-x-0 {
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1297,16 +1254,8 @@ th {
   --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.-translate-y-2 {
-  --tw-translate-y: -0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .translate-y-0 {
   --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-y-px {
-  --tw-translate-y: 1px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180 {
@@ -1329,11 +1278,11 @@ th {
 .animate-spin {
   animation: spin 1s linear infinite;
 }
-.cursor-pointer {
-  cursor: pointer;
-}
 .cursor-default {
   cursor: default;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .select-none {
   -webkit-user-select: none;
@@ -1342,9 +1291,6 @@ th {
 }
 .resize-none {
   resize: none;
-}
-.resize {
-  resize: both;
 }
 .snap-x {
   scroll-snap-type: x var(--tw-scroll-snap-strictness);
@@ -1363,9 +1309,6 @@ th {
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-cols-\[1fr_\.3fr\] {
   grid-template-columns: 1fr .3fr;
@@ -1444,11 +1387,6 @@ th {
 }
 .gap-\[20px\] {
   gap: 20px;
-}
-.-space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(-0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(-0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1544,10 +1482,6 @@ th {
 .border-2 {
   border-width: 2px;
 }
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1561,6 +1495,9 @@ th {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-neutral-200\/70 {
+  border-color: rgb(229 229 229 / 0.7);
 }
 .border-off-white {
   --tw-border-opacity: 1;
@@ -1577,13 +1514,6 @@ th {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-.border-neutral-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 229 229 / var(--tw-border-opacity));
-}
-.border-neutral-200\/70 {
-  border-color: rgb(229 229 229 / 0.7);
 }
 .bg-\[\#f8f9f4\] {
   --tw-bg-opacity: 1;
@@ -1629,9 +1559,9 @@ th {
   --tw-bg-opacity: 1;
   background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
-.bg-neutral-50 {
+.bg-neutral-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 .bg-primary {
   --tw-bg-opacity: 1;
@@ -1644,6 +1574,10 @@ th {
 .bg-shof-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(198 179 165 / var(--tw-bg-opacity));
+}
+.bg-shof-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
 }
 .bg-shof-pink {
   --tw-bg-opacity: 1;
@@ -1663,13 +1597,9 @@ th {
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }
-.bg-neutral-200 {
+.bg-blue-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
-}
-.bg-shof-green {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
@@ -1777,22 +1707,23 @@ th {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
 .pb-12 {
   padding-bottom: 3rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
 }
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+.pl-3 {
+  padding-left: 0.75rem;
+}
 .pl-9 {
   padding-left: 2.25rem;
+}
+.pr-10 {
+  padding-right: 2.5rem;
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -1803,41 +1734,11 @@ th {
 .pt-4 {
   padding-top: 1rem;
 }
-.pt-8 {
-  padding-top: 2rem;
-}
-.pl-6 {
-  padding-left: 1.5rem;
-}
-.pl-4 {
-  padding-left: 1rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
-}
-.pr-12 {
-  padding-right: 3rem;
-}
-.pr-10 {
-  padding-right: 2.5rem;
-}
-.pt-2 {
-  padding-top: 0.5rem;
-}
-.pb-4 {
-  padding-bottom: 1rem;
-}
-.pt-6 {
-  padding-top: 1.5rem;
-}
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
 .pt-5 {
   padding-top: 1.25rem;
 }
-.pb-1 {
-  padding-bottom: 0.25rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1952,10 +1853,6 @@ th {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1979,6 +1876,10 @@ th {
 .text-neutral-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 82 / var(--tw-text-opacity));
+}
+.text-neutral-700 {
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity));
 }
 .text-neutral-800 {
   --tw-text-opacity: 1;
@@ -2040,14 +1941,6 @@ th {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-neutral-400 {
-  --tw-text-opacity: 1;
-  color: rgb(163 163 163 / var(--tw-text-opacity));
-}
-.text-neutral-700 {
-  --tw-text-opacity: 1;
-  color: rgb(64 64 64 / var(--tw-text-opacity));
-}
 .underline {
   text-decoration-line: underline;
 }
@@ -2069,15 +1962,14 @@ th {
 .opacity-75 {
   opacity: 0.75;
 }
-.opacity-0 {
-  opacity: 0;
-}
-.opacity-60 {
-  opacity: 0.6;
-}
 .shadow-inner {
   --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-none {
@@ -2093,11 +1985,6 @@ th {
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
@@ -2254,14 +2141,7 @@ div[data-block-handle='ig_feed'] {
   .sm\:shadow-l {
     box-shadow: var(--shadow-high);
   }
-}
-@media (min-width: 768px) {
 
-  .md\:shadow-m {
-    box-shadow: var(--shadow-medium);
-  }
-}
-@media (min-width: 640px) {
   .sm\:container {
     width: 100%;
     margin-right: auto;
@@ -2269,26 +2149,31 @@ div[data-block-handle='ig_feed'] {
     padding-right: 20px;
     padding-left: 20px;
   }
+
   @media (min-width: 640px) {
     .sm\:container {
       max-width: 640px;
     }
   }
+
   @media (min-width: 768px) {
     .sm\:container {
       max-width: 768px;
     }
   }
+
   @media (min-width: 1024px) {
     .sm\:container {
       max-width: 1024px;
     }
   }
+
   @media (min-width: 1280px) {
     .sm\:container {
       max-width: 1280px;
     }
   }
+
   @media (min-width: 1536px) {
     .sm\:container {
       max-width: 1536px;
@@ -2297,10 +2182,6 @@ div[data-block-handle='ig_feed'] {
 }
 .hover\:-rotate-90:hover {
   --tw-rotate: -90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.hover\:rotate-90:hover {
-  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .hover\:scale-105:hover {
@@ -2328,9 +2209,6 @@ div[data-block-handle='ig_feed'] {
   --tw-scale-y: 1.3;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.hover\:cursor-pointer:hover {
-  cursor: pointer;
-}
 .hover\:\!bg-gray-100:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
@@ -2351,13 +2229,13 @@ div[data-block-handle='ig_feed'] {
   --tw-bg-opacity: 1;
   background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
-.hover\:bg-red-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
-}
 .hover\:bg-neutral-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+.hover\:bg-red-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 .hover\:fill-accent:hover {
   fill: #ec764a;
@@ -2368,10 +2246,6 @@ div[data-block-handle='ig_feed'] {
 .hover\:text-accent:hover {
   --tw-text-opacity: 1;
   color: rgb(236 118 74 / var(--tw-text-opacity));
-}
-.hover\:text-blue-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 .hover\:text-hover:hover {
   --tw-text-opacity: 1;
@@ -2394,14 +2268,6 @@ div[data-block-handle='ig_feed'] {
 .hover\:brightness-110:hover {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.focus\:bg-accent:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
-}
-.focus\:bg-white:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
@@ -2432,12 +2298,6 @@ div[data-block-handle='ig_feed'] {
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
 }
-.group:hover .group-hover\:visible {
-  visibility: visible;
-}
-.group:hover .group-hover\:mr-0 {
-  margin-right: 0px;
-}
 .group:hover .group-hover\:block {
   display: block;
 }
@@ -2452,17 +2312,9 @@ div[data-block-handle='ig_feed'] {
   --tw-translate-x: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.group:hover .group-hover\:rotate-180 {
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .group:hover .group-hover\:rotate-90 {
   --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.group:hover .group-hover\:bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .group:hover .group-hover\:fill-accent {
   fill: #ec764a;
@@ -2478,9 +2330,6 @@ div[data-block-handle='ig_feed'] {
 .group:hover .group-hover\:underline {
   text-decoration-line: underline;
 }
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
-}
 .peer:checked ~ .peer-checked\:font-medium {
   font-weight: 500;
 }
@@ -2491,11 +2340,11 @@ div[data-block-handle='ig_feed'] {
   opacity: 0.5;
 }
 @media (min-width: 640px) {
-  .sm\:right-6 {
-    right: 1.5rem;
-  }
   .sm\:left-6 {
     left: 1.5rem;
+  }
+  .sm\:right-6 {
+    right: 1.5rem;
   }
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
@@ -2506,18 +2355,6 @@ div[data-block-handle='ig_feed'] {
   .sm\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
-  }
-  .sm\:mr-0 {
-    margin-right: 0px;
-  }
-  .sm\:block {
-    display: block;
-  }
-  .sm\:inline-block {
-    display: inline-block;
-  }
-  .sm\:inline {
-    display: inline;
   }
   .sm\:table-cell {
     display: table-cell;
@@ -2567,9 +2404,6 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:justify-start {
     justify-content: flex-start;
-  }
-  .sm\:justify-end {
-    justify-content: flex-end;
   }
   .sm\:justify-center {
     justify-content: center;
@@ -2662,9 +2496,6 @@ div[data-block-handle='ig_feed'] {
   .md\:mr-6 {
     margin-right: 1.5rem;
   }
-  .md\:mr-0 {
-    margin-right: 0px;
-  }
   .md\:block {
     display: block;
   }
@@ -2674,17 +2505,11 @@ div[data-block-handle='ig_feed'] {
   .md\:table-cell {
     display: table-cell;
   }
-  .md\:grid {
-    display: grid;
-  }
   .md\:hidden {
     display: none;
   }
   .md\:h-32 {
     height: 8rem;
-  }
-  .md\:h-8 {
-    height: 2rem;
   }
   .md\:h-80 {
     height: 20rem;
@@ -2701,9 +2526,6 @@ div[data-block-handle='ig_feed'] {
   .md\:w-1\/2 {
     width: 50%;
   }
-  .md\:w-8 {
-    width: 2rem;
-  }
   .md\:w-\[300px\] {
     width: 300px;
   }
@@ -2716,10 +2538,6 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:w-full {
     width: 100%;
-  }
-  .md\:w-max {
-    width: -moz-max-content;
-    width: max-content;
   }
   .md\:max-w-\[450px\] {
     max-width: 450px;
@@ -2771,17 +2589,10 @@ div[data-block-handle='ig_feed'] {
   .md\:text-left {
     text-align: left;
   }
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 @media (min-width: 1024px) {
   .lg\:mb-0 {
     margin-bottom: 0px;
-  }
-  .lg\:mt-6 {
-    margin-top: 1.5rem;
   }
   .lg\:block {
     display: block;
