Add modal overlay and image pickers with links and zoom options.

--- a/sections/kolarz.liquid
+++ b/sections/kolarz.liquid
@@ -11,6 +11,7 @@
   }">
   <!-- Modal overlay (click to close) -->
   <div
+    x-cloak
     x-show="showModal"
     @click="closeModal"
     x-transition
@@ -95,50 +96,61 @@
         "type": "image_picker",
         "label": "Image 2",
         "id": "image_2"
-      }, {
+      },
+      {
         "type": "url",
         "label": "Image 2 Link",
         "id": "image_2_link"
-      }, {
+      },
+      {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_2_zoom",
         "default": false
-      }, {
+      },
+      {
         "type": "image_picker",
         "label": "Image 3",
         "id": "image_3"
-      }, {
+      },
+      {
         "type": "url",
         "label": "Image 3 Link",
         "id": "image_3_link"
-      }, {
+      },
+      {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_3_zoom",
         "default": false
-      }, {
+      },
+      {
         "type": "image_picker",
         "label": "Image 4",
         "id": "image_4"
-      }, {
+      },
+      {
         "type": "url",
         "label": "Image 4 Link",
         "id": "image_4_link"
-      }, {
+      },
+      {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_4_zoom",
         "default": false
-      }, {
+      },
+      {
         "type": "image_picker",
         "label": "Image 5",
         "id": "image_5"
-      }, {
+      },
+      {
         "type": "url",
         "label": "Image 5 Link",
         "id": "image_5_link"
-      }, {
+      },
+      {
         "type": "checkbox",
         "label": "Podgląd zdjęcia po kliknięciu",
         "id": "image_5_zoom",
