Add padding to search input and table header

--- a/snippets/search-input.liquid
+++ b/snippets/search-input.liquid
@@ -11,7 +11,7 @@
       {% render 'icon-search' %}
     </button>
     <input
-      class="w-full py-3"
+      class="w-full py-3 pr-3"
       type="search"
       name="q"
       placeholder="Szukaj">
