Update cart page header margin

--- a/sections/cart-page.liquid
+++ b/sections/cart-page.liquid
@@ -3,7 +3,7 @@
   x-data="cart({{ section.settings.gift_wrap_product.variants[0].id }})"
   @update-cart.window="updateCart;">
 
-  <h1 class="text-4xl font-medium mb-5">Koszyk</h1>
+  <h1 class="text-4xl font-medium my-5">Koszyk</h1>
 
   <hr>
 
