Add Accordion preset to accordion-big section.

--- a/sections/accordion-big.liquid
+++ b/sections/accordion-big.liquid
@@ -54,6 +54,11 @@
           }
         ]
       }
+    ],
+    "presets": [
+      {
+        "name": "Accordion"
+      }
     ]
   }
 {% endschema %}
