--- a/snippets/search-input.liquid
+++ b/snippets/search-input.liquid
@@ -1,19 +1,58 @@
+{% comment %} <div
+                                                                                            x-cloak
+                                                                                            x-show="isSearchOpen"
+                                                                                            class="fixed w-full h-full inset-0 flex justify-center z-50 items-start">
+
+                                                                                            <form
+                                                                                              class="relative z-50 w-full flex bg-white border-b sm:m-10 sm:border sm:shadow-m sm:w-full sm:rounded-md text-gray-500 md:w-1/2 md:top-[10vmin]"
+                                                                                              action="{{ routes.search_url }}"
+                                                                                              method="get">
+                                                                                              <button type="submit" class="px-3">
+                                                                                                {% render 'icon-search' %}
+                                                                                              </button>
+                                                                                              <input
+                                                                                                class="w-full py-3"
+                                                                                                type="search"
+                                                                                                name="q"
+                                                                                                placeholder="Szukaj">
+                                                                                            </form>
+</div> {% endcomment %}
+
+<!-- search-bar.liquid -->
 <div
   x-cloak
   x-show="isSearchOpen"
-  class="fixed w-full inset-0 flex justify-center z-50 items-start">
+  class="fixed w-full h-full inset-0 flex justify-center z-50 items-start"
+  x-data="search"
+  @click.away="reset()">
+  {% comment %} OVERLAY {% endcomment %}
   <div class="overlay fixed inset-0 transition-all z-50 backdrop-blur-sm bg-white/50" @click="toggleSearch"></div>
-  <form
-    class="relative z-50 w-full flex bg-white border-b sm:m-10 sm:border sm:shadow-m sm:w-full sm:rounded-md text-gray-500 md:w-1/2 md:top-[10vmin]"
-    action="{{ routes.search_url }}"
-    method="get">
-    <button type="submit" class="px-3">
-      {% render 'icon-search' %}
-    </button>
-    <input
-      class="w-full py-3 pr-3"
-      type="search"
-      name="q"
-      placeholder="Szukaj">
-  </form>
+
+  {% comment %} CONTENT {% endcomment %}
+  <div class="relative z-50 w-full h-full flex flex-col overflow-hidden bg-white border-b sm:mx-10 sm:border sm:shadow-l sm:h-auto sm:max-h-[80vh] sm:rounded-md text-gray-500 sm:w-[400px] sm:top-[10vh]">
+    {% comment %} Search input {% endcomment %}
+    <div class="flex w-full z-[99] border rounded-md" :class="open ? 'shadow-m' : ''">
+      <div class="flex justify-center items-center px-3">{% render 'icon-search' %}</div>
+      <input
+        type="text"
+        id="search-input"
+        autocomplete="off"
+        class="w-full py-3 bg-transparent"
+        placeholder="Szukaj..."
+        x-model="query"
+        @input.debounce.300="search" />
+    </div>
+    <div class="relative flex-1 flex flex-col min-h-0 overflow-y-scroll bg-white rounded-md w-full" x-show="open">
+      <template x-for="result in results" :key="result.id">
+        <a :href="result.url" class="flex items-center border-b gap-2 py-1 text-lg text-gray-700 hover:bg-gray-100">
+          <img
+            :src="result.image"
+            :alt="result.title"
+            width="100">
+
+          <span class="max-w-[200px]" x-text="result.title"></span>
+        </a>
+      </template>
+    </div>
+  </div>
 </div>
