--- a/snippets/product-quantity.liquid
+++ b/snippets/product-quantity.liquid
@@ -21,7 +21,7 @@
   </button>
   <input
     type="number"
-    class="product__number text-center p-0 w-10 border-[#ddd] border rounded-lg bg-gray-100"
+    class="product__number text-center p-0 w-10 border-[#ddd] border rounded-lg"
     name="quantity"
     min="1"
     onkeydown="return false"
