--- a/snippets/cart-page-content.liquid
+++ b/snippets/cart-page-content.liquid
@@ -27,10 +27,16 @@
               </h3>
               {% if item.variant.title != 'Default Title'		and item.variant.title != 'No Color / OS'		and item.variant.title != 'NC / OS'
               %}
-                <span class="text-xs font-medium text-gray-500 my-2">
-                  {{ item.variant.title }}
-                </span>
+                {% for option in item.options_with_values %}
+                  <div class="text-sm mt-1">{{ option.name }}: {{ option.value }}</div>
+                {% endfor %}
               {% endif %}
+
+              {% comment %} Item Properties {% endcomment %}
+              {% for property in item.properties %}
+                <p class="text-sm mt-1">{{ property.first }}: {{ property.last }}</p>
+              {% endfor %}
+
               <p class="text-md">{{ item.price | money }}</p>
               <div class="md:hidden block mt-3">
                 {% render 'product-quantity'
